Minor style updates

--- a/ATREDIS-2018-0003.md
+++ b/ATREDIS-2018-0003.md
@@ -41,9 +41,9 @@ This vulnerability was found by Ryan Hanson of Atredis Partners
 ## Technical Details
 To reproduce the vulnerability the user would first empty the log folder and then create the following mount point and symbolic link structure to create a DLL in the Cylance installation folder:
 
-1. The C:\Program Files\Cylance\Desktop\log folder points to the \RPC Control\ object directory.
-2. The \RPC Control\2017-12-14.log symlink points to \??\C:\Program Files\Cylance\Desktop\libc.dll
+1. The `C:\Program Files\Cylance\Desktop\log` folder points to the `\RPC Control\` object directory.
+2. The `\RPC Control\2017-12-14.log` symlink points to `\??\C:\Program Files\Cylance\Desktop\libc.dll`
 
-To trigger the vulnerability, the CylanceUI.exe IPC channel is used to communicate with the CylanceSvc to set the logging level and check for update. Upon triggering an update, CyUpdate.exe is started and attempts to write to the log file C:\Program Files\Cylance\Desktop\log\2017-12-14.log. With the log folder mount point in place, the path resolves to \RPC Control\2017-12-14.log, which points to \??\C:\Program Files\Cylance\Desktop\libc.dll. The end result is a DLL created with modify permissions granted to all Users, allowing for it to be overwritten with a malicious DLL. It should be noted that any file can be created in any folder, this is not limited to the Cylance folder.
+To trigger the vulnerability, the CylanceUI.exe IPC channel is used to communicate with the CylanceSvc to set the logging level and check for update. Upon triggering an update, CyUpdate.exe is started and attempts to write to the log file `C:\Program Files\Cylance\Desktop\log\2017-12-14.log`. With the log folder mount point in place, the path resolves to `\RPC Control\2017-12-14.log`, which points to `\??\C:\Program Files\Cylance\Desktop\libc.dll`. The end result is a DLL created with modify permissions granted to all Users, allowing for it to be overwritten with a malicious DLL. It should be noted that any file can be created in any folder, this is not limited to the Cylance folder.
 
 By combining the arbitrary file write with a DLL side-load in the CyUpdate.exe process, privileges can be escalated to SYSTEM. Upon startup, the CyUpdate process attempts to find a missing libc.dll in the Cylance folder. If libc.dll is found, the CyUpdate process loads it and triggers code execution. Since CyUpdate.exe is signed by Cylance and running as SYSTEM, it is permitted to communicate directly with the CYDETECT driver. By sending the ENABLE_STOP IOCTL code, the malicious DLL can gain the ability to stop the CylanceSvc.
