--- a/ATREDIS-2019-0006.md
+++ b/ATREDIS-2019-0006.md
@@ -28,7 +28,7 @@ This issue was identified by Ryan Hanson of Atredis Partners
 
 ## References
 
-None
+ * CVE-2020-7931
 
 
 ## Report Timeline
@@ -43,7 +43,7 @@ None
 
 2019-12-10: JFrog responded with information about available patches for this issue.
 
-2019-01-23: Atredis Partners published this advisory.
+2020-01-23: Atredis Partners published this advisory.
 
 
 ## Technical Details
