Changed unauthenticated to authenticated

--- a/ATREDIS-2019-0006.md
+++ b/ATREDIS-2019-0006.md
@@ -49,7 +49,7 @@ This issue was identified by Ryan Hanson of Atredis Partners
 
 ## Technical Details
 
-JFrog allows unauthenticated users to execute Freemarker templates that have been deployed and marked as filtered resources. This can be abused to read and write files on the filesystem of the Artfactory server. 
+JFrog allows authenticated users to execute Freemarker templates that have been deployed and marked as filtered resources. This can be abused to read and write files on the filesystem of the Artfactory server. 
 
 These attacks work by reusing Java objects that are within scope of the template. 
 
