--- a/ATREDIS-2020-0011.md
+++ b/ATREDIS-2020-0011.md
@@ -40,7 +40,7 @@ This issue was found by Stephen Breen of Atredis Partners.
 
 
 ## Technical Details
-LexiCom is an Electronic Data Interfchange (EDI) product from the vendor Cleo. It facilitates communication between trading partners over industry standard protocols such as Applicability Statement 2 (AS2). Two flaws in Cleo LexiCom's implmentation led to the ability to obtain remote command execution as an unauthenticated user:
+LexiCom is an Electronic Data Interchange (EDI) product from the vendor Cleo. It facilitates communication between trading partners over industry standard protocols such as Applicability Statement 2 (AS2). Two flaws in Cleo LexiCom's implmentation led to the ability to obtain remote command execution as an unauthenticated user:
 
 The first is that the requirement for the sender of an AS2 message to identify themselves via encryption and signing of the message can be bypassed by changing the Content-Type of the message to `text/plain`.
 
