--- a/ATREDIS-2020-0011.md
+++ b/ATREDIS-2020-0011.md
@@ -32,7 +32,7 @@ This issue was found by Stephen Breen of Atredis Partners.
 - 2021-02-25: Vendor replied that the support team also handles security issues.
 - 2021-03-01: Atredis Partners uploaded the vulnerability report to the vendors secure file transfer site.
 - 2021-03-02: Vendor support team replied with release notes for v5.6.2 of LexiCom, but release notes do not list if issue is fixed.
-- 2021-03-02: Atredis Partners informed the vendor that this is a vulnerability disclosure and that Atredis is not one of thier customers.
+- 2021-03-02: Atredis Partners informed the vendor that this is a vulnerability disclosure and that Atredis is not one of their customers.
 - 2021-03-23: Atredis requested an update, no response from vendor.
 - 2021-04-13: Atredis requested an update, no response from vendor.
 - 2021-04-14: Atredis reported the vulnerability to CERT/CC.
